@@ -13,9 +13,9 @@ wubizip: check_wine pylauncher src/main.py src/wubi/*.py
 	cp wine/drive_c/windows/system32/python23.dll build/pylauncher #TBD
 	PYTHONPATH=src tools/pywine build/pylauncher/pack.py src/main.py --nopyc build/wubi data bin
 	cp wine/drive_c/Python23/python.exe build/wubi/files #TBD
-	mv build/wubi/files build/wubi/wubi-app
-	cd build/wubi; zip -r ../wubi-app.zip wubi-app
-	mv build/wubi/wubi-app build/wubi/files
+	mv build/wubi/files build/wubi/wubi
+	cd build/wubi; zip -r ../wubi.zip wubi
+	mv build/wubi/wubi build/wubi/files
 
 pylauncher: 7z src/pylauncher/*.c src/pylauncher/*.py
 	cp -rf src/pylauncher build
