@@ -43,24 +43,27 @@ class DownloadProgress(object):
         self.basename = basename
         self.length = length
         self.text = text
+        if self.associated_task:
+            self.associated_task.size = length
         log.debug("Download start filename=%s, url=%s, basename=%s, length=%s, text=%s" %
             (filename, url, basename, length, text))
-        if callable(self.associated_task):
-            self.associated_task.set_progress(0, "Downloading %s from %s" % (basename, url))
+        if self.associated_task:
+            self.associated_task.set_progress(0, message="Downloading %s from %s" % (basename, url))
 
     def update(self, amount_read):
         progress = 1.0*amount_read/float(self.length+1)
-        if callable(self.associated_task):
-            if self.associated_task.set_progress(progress):
+        if self.associated_task:
+            if self.associated_task.set_progress(amount_read):
                 return True #TBD cancel download
 
     def end(self, amount_read):
         log.debug("download finished (read %s bytes)" % amount_read)
-        if callable(self.associated_task):
+        if self.associated_task:
             self.associated_task.finish()
 
 def download(url, filename=None, associated_task=None, web_proxy = None):
-    associated_task.description = "Downloading %s" % url
+    if associated_task:
+        associated_task.description = "Downloading %s" % url
     log.debug("downloading %s > %s" % (url, filename))
     progress_obj = DownloadProgress(associated_task)
     if web_proxy:
